--- a/resources/assets/sass/status-page/_status-page.scss
+++ b/resources/assets/sass/status-page/_status-page.scss
@@ -310,6 +310,76 @@ body.status-page {
             }
         }
 
+        .list-group-item-error-budget {
+            border-radius: 1em;
+            background-color: #ffffff;
+            font-size: 1.1em;
+            padding: 15px 15px;
+            margin: 15px;
+            text-align: center;
+
+            display: inline;
+            li {
+                float: left;
+            }
+
+            a {
+                font-weight: 400;
+            }
+
+            h4 {
+                margin: 0;
+                font-weight: 400;
+                max-width: 90%;
+            }
+
+            p, time {
+                &:not(:last-child) {
+                    margin-bottom: 100px;
+                }
+            }
+
+            time {
+                margin-bottom: 0;
+            }
+
+            i.icon {
+                font-size: 21px;
+                line-height: 24px;
+                text-align: center;
+                display: inline-block;
+                min-width: 20px;
+            }
+
+            &.group-name {
+                background-color: $cachet_gray_light;
+                padding: {
+                    top: 0.6em;
+                    bottom: 0.6em;
+                }
+                cursor: pointer;
+                -webkit-touch-callout: none;
+                -webkit-user-select: none;
+                -khtml-user-select: none;
+                -moz-user-select: none;
+                -ms-user-select: none;
+                user-select: none;
+            }
+
+            &.break {
+                padding: 1px;
+                background-color: $cachet-base-medium;
+            }
+        }
+
+        .metric-large {
+            font-size: 2em;
+        }
+
+        .metric-description {
+            font-size: 1.25em;
+        }
+
         &.components {
             @extend .panel;
             border-color: $cachet_gray_light;
