restyle the <hr>

--- a/resources/assets/sass/status-page/_status-page.scss
+++ b/resources/assets/sass/status-page/_status-page.scss
@@ -499,6 +499,7 @@ body.status-page {
     }
 
     .hr-status {
-        border-top: 0.125em solid $cachet-base-dark;
+        border-top: 0.1875em solid #636261;
+        width: 75%;
     }
 }
